To rectify the google map controls distorts issue
To rectify the google map controls distorts issue #90

--- a/css/AdminLTE.css
+++ b/css/AdminLTE.css
@@ -144,6 +144,10 @@ h6,
 img {
   max-width: 100% !important;
 }
+/* To rectify google map controls distorts issue */
+.gmnoprint img{
+	max-width:none !important;
+}
 .sort-highlight {
   background: #f4f4f4;
   border: 1px dashed #ddd;
